// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Chip InteractiveChips smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  border-radius: 1.5rem;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: normal;
  box-sizing: border-box;
  padding: 0.25rem 0.5rem;
  background-color: #f3eaff;
  color: black;
  border: 0.0625rem solid #7a2de5;
  cursor: auto;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-3:hover:not(:disabled) {
  background: #e7d6ff;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-3:active:not(:disabled) {
  background: #dbc1ff;
}

.emotion-3:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3>:not(:last-child) {
  margin-right: 0.25rem;
}

.emotion-4 {
  cursor: pointer;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #0f0f17;
  width: 0.875rem;
  height: 0.875rem;
}

.emotion-6 path {
  fill: #0f0f17;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  border-radius: 1.5rem;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: normal;
  box-sizing: border-box;
  padding: 0.25rem 0.5rem;
  background-color: white;
  color: black;
  border: 0.0625rem solid #cfd7e5;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-7:hover:not(:disabled) {
  background: #f3f5f8;
}

.emotion-7:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-7:active:not(:disabled) {
  background: #dbc1ff;
}

.emotion-7:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-7>:not(:last-child) {
  margin-right: 0.25rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1rem;
  height: 1rem;
  border-radius: 100%;
  background: #cfd7e5;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <button
              class="emotion-3"
              data-testid="chip"
              role="button"
            >
              <div
                aria-label="chip_4"
              >
                Label
              </div>
              <div
                aria-hidden="false"
                class="emotion-4"
              >
                <span
                  class="emotion-5"
                  data-testid="chip-delete"
                >
                  <svg
                    class="emotion-6"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                      id="\\uD83D\\uDD36-Symbols"
                      stroke="none"
                      stroke-width="1"
                    >
                      <g
                        id="Close"
                      >
                        <path
                          d="M17.6568542,4.92893219 L19.0710678,6.34314575 L13.4139322,11.9999322 L19.0710678,17.6568542 L17.6568542,19.0710678 L11.9999322,13.4139322 L6.34314575,19.0710678 L4.92893219,17.6568542 L10.5849322,11.9999322 L4.92893219,6.34314575 L6.34314575,4.92893219 L11.9999322,10.5849322 L17.6568542,4.92893219 Z"
                        />
                      </g>
                    </g>
                  </svg>
                </span>
              </div>
            </button>
          </div>
          <div
            style="margin: 5px;"
          >
            <button
              class="emotion-7"
              data-testid="chip"
              role="button"
            >
              <div
                aria-label="chip_5"
              >
                Label
              </div>
            </button>
          </div>
          <div
            style="margin: 5px;"
          >
            <button
              class="emotion-7"
              data-testid="chip"
              role="button"
            >
              <div
                aria-label="chip_6"
              >
                Label
              </div>
              <div
                class="emotion-9"
                data-testid="badge"
              >
                5
              </div>
            </button>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Chip ReadOnlyChips smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  border-radius: 1.5rem;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: normal;
  box-sizing: border-box;
  padding: 0.25rem 0.5rem;
  background-color: #ffe7f0;
  color: black;
  border: 0.0625rem solid #e51460;
  cursor: auto;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: background-color 150ms linear;
  transition: background-color 150ms linear;
}

.emotion-3:hover:not(:disabled) {
  background: #ffd0e1;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: none;
}

.emotion-3>:not(:last-child) {
  margin-right: 0.25rem;
}

.emotion-5>div {
  width: 1rem;
  height: 1rem;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  box-sizing: border-box;
  background-color: #e7eefe;
  color: #1249C4;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Roboto;
  font-weight: 500;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
}

.emotion-6 img {
  border-radius: 6.25rem;
  width: 100%;
  height: 100%;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <div
            style="margin: 5px;"
          >
            <div
              aria-readonly="true"
              class="emotion-3"
              data-testid="chip"
            >
              <div
                aria-label="chip_1"
              >
                Label
              </div>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div
              aria-readonly="true"
              class="emotion-3"
              data-testid="chip"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                  data-testid="chip_avatar"
                >
                  KN
                </div>
              </div>
              <div
                aria-label="chip_2"
              >
                Label
              </div>
            </div>
          </div>
          <div
            style="margin: 5px;"
          >
            <div
              aria-readonly="true"
              class="emotion-3"
              data-testid="chip"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                  data-testid="chip_avatar"
                >
                  <img
                    src="https://mui.com/static/images/avatar/1.jpg"
                  />
                </div>
              </div>
              <div
                aria-label="chip_3"
              >
                Label
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;
